# DIO-FASTAPI

./: Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/versions/: 0ea2b37a5691_initial_migration.py
workout_api/: main.py  routers.py
workout_api/atleta/: controller.py  models.py  schemas.py
workout_api/categorias/: controller.py  models.py  schemas.py
workout_api/centro_treinamento/: controller.py  schemas.py
workout_api/contrib/: schemas.py
